<resources>
    <string name="app_name">File Sharing</string>

    <string name="attach">Attach</string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
    <string name="document">Document</string>
    <string name="filename">filename</string>
    <string name="_11_15_pm">11:15 PM</string>
    <string name="phone">Phone</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="create_account">Create Account</string>
    <string name="username">Full Namme</string>
    <string name="register">Register</string>
    <string name="loading">Sending</string>
    <string name="already_have_an_account_login_here">Already have an account? Login here</string>
    <string name="contacts">Contacts</string>
    <string name="media">Media</string>
    <string name="search">Search</string>
    <string name="search_">Search…</string>
    <string name="title">Name</string>
    <string name="send_receive_status">Status</string>
    <string name="received">Received</string>
    <string name="sent">Sent</string>

    <string name="action_settings">Settings</string>
    <string name="action_logout">Logout</string>
    <string name="change_password">Change Password</string>

    <string name="err_msg_password">Please Enter valid Password</string>
    <string name="err_msg_pass_digit">Must Be Six Digit</string>
    <string name="date">DATE</string>
    <string name="contact_name">Contact name</string>
    <string name="contact_no">Contact no</string>
    <string name="p_l_shah_amp_co">P.L.Shah &amp; co.</string>
    <string name="about_you">About You</string>
    <string name="from_gallery">From Gallery</string>
    <string name="exit">Exit</string>
    <string name="take_photo">Take Photo</string>

</resources>
