<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:id="@+id/mainlinearlayout"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_marginLeft="5dp"
              android:layout_marginRight="5dp">


    <LinearLayout
        android:id="@+id/outgoing_layout_bubble"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:weightSum="2">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:gravity="start"
            android:orientation="horizontal"
            android:padding="3dp"
            android:weightSum="2">

            <TextView
                android:id="@+id/textview_date"
                style="@style/chat_timings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_weight="1.5"
                android:text="@string/date"
                android:textSize="14sp"/>

            <TextView
                android:id="@+id/txt_file_size"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/ib_img_size"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center"
                android:layout_weight="0.5"
                android:gravity="center"
                android:text="xyz"
                android:textColor="@android:color/background_dark"
                android:textSize="14sp"/>
            <!--    <ImageButton
                    android:id="@+id/ib_remove"
                    android:layout_width="10dp"
                    android:layout_height="18dp"
                    android:layout_gravity="end"
                    android:layout_weight="0.4"
                    android:padding="5dp"
                    android:background="@android:color/transparent"
                    android:src="@android:drawable/ic_menu_close_clear_cancel" />-->
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="top"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/file_image"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="start|top"
                android:layout_margin="5dp"
                android:background="@drawable/pdf"
                android:padding="5dp"/>

            <TextView
                android:id="@+id/file_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start|top"
                android:layout_margin="10dp"
                android:text="@string/filename"
                android:textAlignment="center"
                android:textColor="@color/allApp_textColor"
                android:textSize="20sp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:baselineAligned="true"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/send_receive"
                style="@style/chat_timings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.73"
                android:gravity="center"
                android:text="@string/send_receive_status"
                android:textSize="12sp"/>

            <TextView
                android:id="@+id/textview_time"
                style="@style/chat_timings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.6"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/_11_15_pm"
                android:textSize="12sp"/>

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:layout_weight="0.2"
                android:padding="5dp"
                android:src="@drawable/message_got_read_receipt_from_target"/>

        </LinearLayout>
    </LinearLayout>

</LinearLayout>